# data-engineering-practice

./: .gitignore  README.md
Exercises/: .gitignore
Exercises/Exercise-1/: .dockerignore  .gitignore  README.md  async_main.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_main.py
Exercises/Exercise-10/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
Exercises/Exercise-10/data/: 202306-divvy-tripdata.csv
Exercises/Exercise-2/: .gitignore  Dockerfile  Exploration.ipynb  README.md  docker-compose.yml  main.py  main_test.py  pyproject.toml  requirements.txt  test_main2.py
Exercises/Exercise-3/: README.md  docker-compose.yml  main.py  main_test.py  requirements.txt  rootkey.csv  test_main3.py
Exercises/Exercise-4/: README.md  docker-compose.yml  main.py  requirements.txt  test_main.py  test_main4.py
Exercises/Exercise-4/data/: file-1.json
Exercises/Exercise-4/invalid_json_test_directory/: invalid.json
Exercises/Exercise-5/: README.md  ddl.sql  docker-compose.yml  main.py  requirements.txt
Exercises/Exercise-5/data/: accounts.csv  products.csv  transactions.csv
Exercises/Exercise-6/: Dockerfile  README.md  dd.py  docker-compose.yml  main.py  requirements.txt  test_main.py  test_main6.py
Exercises/Exercise-7/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  test_main7.py
Exercises/Exercise-8/: Dockerfile  README.md  main.py  requirements.txt  test_main8.py
Exercises/Exercise-9/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  test_main9.py
(+11 files in other folders)
