[tool.poetry]
name = "exercise-2"
version = "0.1.0"
description = ""
authors = ["FacuD <facundodocampo1@gmail.com>"]
readme = "README.md"
packages = [{include = "exercise_2"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
requests = "^2.31.0"
pandas = "^2.1.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
